@@ -22,11 +22,12 @@ from holidays.holiday_base import HolidayBase
 
 
 class Austria(HolidayBase):
-    PROVINCES = ['B', 'K', 'N', 'O', 'S', 'ST', 'T', 'V', 'W']
+    PROVINCES = ['AT-1', 'AT-2', 'AT-3', 'AT-4', 'AT-5', 'AT-6',
+                 'AT-7', 'AT-8', 'AT-9']
 
     def __init__(self, **kwargs):
         self.country = 'AT'
-        self.prov = kwargs.pop('prov', kwargs.pop('state', 'W'))
+        self.prov = kwargs.pop('prov', kwargs.pop('state', 'AT-9'))
         HolidayBase.__init__(self, **kwargs)
 
     def _populate(self, year):
