@@ -8,6 +8,7 @@ Released ???????? ??, ????
 - Mexico fix (Rosi2143, dr-p)
 - Croatia fix (sebojanko, dr-p)
 - US Georgia fix (jbroudou, dr-p)
+- Austria province ISO3166-2 adoption (jbroudou, dr-p)
 
 Version 0.10.1
 ==============
